--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 project (LearnOpenGL)
-add_executable(gettingstart_createwindow gettingstart_createwindow.cpp)
+
+include_directories(/usr/local/include ./include)
+link_directories(/usr/local/lib)
+
+add_executable(learnOpenGL main.cpp src/glad.c)
+target_link_libraries(learnOpenGL glfw)
